WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211203
REGRESSION(
r260889
): TestContextMenu:/webkit/WebKitWebView/populate-menu no longer passes
https://bugs.webkit.org/show_bug.cgi?id=211203
Summary
REGRESSION(r260889): TestContextMenu:/webkit/WebKitWebView/populate-menu no l...
Adrian Perez
Reported
2020-04-29 13:50:31 PDT
This was caused by the patch from
bug #170553
Attachments
Patch
(1.84 KB, patch)
2020-04-29 13:58 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-04-29 13:58:20 PDT
Created
attachment 397996
[details]
Patch Tentative fix. This was a silly screwup on my side due to landing the patch for
bug #170553
with a last minute change to accomodate for GTK4 without waiting for the EWS to run.
EWS
Comment 2
2020-04-29 16:31:18 PDT
Committed
r260923
: <
https://trac.webkit.org/changeset/260923
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397996
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug