REGRESSION(r260889): TestContextMenu:/webkit/WebKitWebView/populate-menu no longer passes https://bugs.webkit.org/show_bug.cgi?id=211203

Reviewed by Aakash Jain.

No new tests needed.

* UIProcess/gtk/WebContextMenuProxyGtk.cpp:
(WebKit::WebContextMenuProxyGtk::WebContextMenuProxyGtk): Attach the correct action
group to the popover widget, instead of a temporary which will always be empty.


Canonical link: https://commits.webkit.org/224112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260923 268f45cc-cd09-0410-ab3c-d52691b4dbfc